--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,8 @@ h1 {
 h2 {
   font-size: 45px;
 }
+
+p {
+    font-family: helvetica, arial, 'hiragino kaku gothic pro', 'ms pgothic', sans-serif;
+    font-size: 12px;
+}
