--- a/src/index.css
+++ b/src/index.css
@@ -19,5 +19,9 @@ h3 {
 
 p {
     font-family: helvetica, arial, 'hiragino kaku gothic pro', 'ms pgothic', sans-serif;
-    font-size: 12px;
+    font-size: 15px;
+}
+
+a {
+  color: rgb(235, 84, 129);
 }
