--- a/src/index.scss
+++ b/src/index.scss
@@ -52,7 +52,7 @@ h3 {
 .toptext {
    font-size: 50px;
    display: inline-block;
-   width: 90%;
+   width: 100%;
    margin-top: 30px;
    margin-bottom: 40px;
 }
@@ -67,11 +67,13 @@ a {
   font-weight: normal;
 }
 
-@media (min-width: 720px) {
-   .toptext {
-      font-size: 100px;
-   }
-}
+.background {
+   position: absolute;
+   display: block;
+   top: 0;
+   left: 0;
+   z-index: 0;
+ }
 
 @keyframes hearts {
   0% {
