--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,10 @@ body {
         transform: translateY(-50%); }
 
 h1 {
-  font-size: 29px;
-  color: #3f3f3f; }
+  font-size: 29px; }
 
 h2 {
-  font-size: 19px;
-  color: #3f3f3f; }
+  font-size: 19px; }
 
 h3 {
   font-size: 14px;
