--- a/src/index.css
+++ b/src/index.css
@@ -2,29 +2,8 @@ body {
   margin: 0;
   padding: 0;
   color: #6d6c6a;
-  font-family: helvetica, arial, 'hiragino kaku gothic pro', 'ms pgothic', sans-serif; }
-  body .particletext {
-    text-align: center;
-    font-size: 48px;
-    position: relative; }
-    body .particletext.hearts > .particle {
-      opacity: 0;
-      position: absolute;
-      background-color: #cc2a5d;
-      animation: hearts 3s ease-in infinite; }
-      body .particletext.hearts > .particle:before, body .particletext.hearts > .particle:after {
-        position: absolute;
-        content: '';
-        border-radius: 100px;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-        background-color: #cc2a5d; }
-      body .particletext.hearts > .particle:before {
-        transform: translateX(-50%); }
-      body .particletext.hearts > .particle:after {
-        transform: translateY(-50%); }
+  font-family: 'Quicksand', 'Raleway', 'Montserrat', helvetica, arial, 'hiragino kaku gothic pro', 'ms pgothic', sans-serif; 
+}
 
 h1 {
   font-size: 29px; }
@@ -44,7 +23,7 @@ h3 {
   margin-bottom: 40px; }
 
 p {
-  font-family: helvetica, arial, 'hiragino kaku gothic pro', 'ms pgothic', sans-serif;
+  font-family: 'Quicksand', 'Raleway', 'Montserrat', helvetica, arial, 'hiragino kaku gothic pro', 'ms pgothic', sans-serif;
   font-size: 12px; }
 
 a {
