--- a/src/index.css
+++ b/src/index.css
@@ -6,44 +6,28 @@ body {
 }
 
 h1 {
-  font-size: 29px; }
+  font-size: 29px; 
+}
 
 h2 {
-  font-size: 19px; }
+  font-size: 19px; 
+}
 
 h3 {
   font-size: 14px;
-  font-family: 'hiragino kaku gothic pro','ms pgothic', 'Playfair Display SC', serif; }
-
-.toptext {
-  font-size: 50px;
-  display: inline-block;
-  width: 100%;
-  margin-top: 30px;
-  margin-bottom: 40px; }
+}
 
 p {
-  font-family: 'Quicksand', 'Raleway', 'Montserrat', helvetica, arial, 'hiragino kaku gothic pro', 'ms pgothic', sans-serif;
-  font-size: 12px; }
+  font-size: 12px; 
+}
 
 a {
   color: #313131;
-  font-weight: normal; }
+  font-weight: normal; 
+}
 
-.background {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  z-index: 0; }
-
-@keyframes hearts {
-  0% {
-    opacity: 0;
-    transform: translate(0, 0%) rotate(45deg); }
-  20% {
-    opacity: 0.8;
-    transform: translate(0, -20%) rotate(45deg); }
-  100% {
-    opacity: 0;
-    transform: translate(0, -1000%) rotate(45deg); } }
+@media (min-width: 700px) {
+  h1 {
+    font-size: 35px; 
+  }
+}
