Remove files size and change extentions

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   color: #6d6c6a;
-  font-family: 'Quicksand', 'Raleway', 'Montserrat', helvetica, arial, 'hiragino kaku gothic pro', 'ms pgothic', sans-serif; 
+  font-family: 'Quicksand', 'Raleway', 'Montserrat', sans-serif; 
 }
 
 h1 {
