--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   color: #6d6c6a;
-  font-family: 'Quicksand', 'Raleway', 'Montserrat', sans-serif; 
+  font-family: 'Quicksand', 'Raleway', 'Montserrat', 'Avenir','Helvetica Neue','Helvetica','Arial','Hiragino Sans','ヒラギノ角ゴシック','Yu Gothic','メイリオ','ＭＳ Ｐゴシック','MS PGothic', sans-serif; 
 }
 
 h1 {
