--- a/src/css/jumbo.css
+++ b/src/css/jumbo.css
@@ -1,21 +1,11 @@
-.github-button {
-  width: 80%;
-  border-radius: 5px;
-  background: #FFAF00;
-  margin-left: auto;
-  margin-right: auto;
-  color: white;
-  font-size: 13px;
-  padding: 10px;
-  text-decoration: none;
-}
-
 .main-container {
   margin-top: -80px;
   height: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  text-align: center;
 }
 
 .name-container {
@@ -25,19 +15,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  text-align: center;
 }
 
-.name-container-dark {
-  height: 800px;
-  font-size: 25px;
-  background: #f4f2ec;
-  font-weight: bold;
-  padding-top: 100px;
-  padding-left: 10%;
-  text-align: left;
-}
-
-.main-title {
+.jumbotron-title {
   color: #6D6C6A;
   animation-name: Visible;
   animation-duration: 1.5s;
@@ -52,7 +34,7 @@
   font-weight: bold;
 }
 
-.name-content {
+.slide-content {
   font-size: 16px;
 }
 
@@ -63,10 +45,7 @@
   .name-container {
     font-size: 40px; 
   }
-  .name-container-dark {
-    font-size: 40px; 
-  }
-  .name-content {
+  .slide-content {
     font-size: 18px;
   }
 }
