--- a/src/css/contents.css
+++ b/src/css/contents.css
@@ -18,6 +18,7 @@
   width: 80%;
   color: #6D6C6A;
   max-width: 1200px;
+  background: white;
   text-align: left;
   font-size: 28px;
   margin-left: auto;
