--- a/src/css/jumbo.css
+++ b/src/css/jumbo.css
@@ -1,6 +1,17 @@
 .small-jumbo {
   background: linear-gradient(90deg, #2abcd6, #2ad6b6);
+  z-index: -1;
+  position: fixed;
+  width: 100%;
+  height: 300px;
+  top: 0;
 }
+
+.flex-container-background {
+  z-index: 1000000000;
+  margin-top: 300px;
+}
+
 
 .main-container {
   margin-top: 80px;
