--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,7 @@ body {
   color: #6d6c6a;
   font-family: 'Quicksand', "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", 'メイリオ' , Meiryo , Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   background-color: transparent;
-	background-image: radial-gradient(#F48FB1 1.5px, transparent 1.5px);
+	/* background-image: radial-gradient(#F48FB1 1.5px, transparent 1.5px); */
   background-size: 75px 75px;
   background-attachment: fixed;
 }
