--- a/src/css/service.css
+++ b/src/css/service.css
@@ -20,10 +20,14 @@
 }
 
 .service-button:hover {
+  padding-top: 20px;
+  padding-bottom: 20px;
   padding-left: 80px;
   padding-right: 80px;
   color: white;
   background: #F92771;
+  transition-duration: 0.5s;
+  animation-timing-function: ease-in-out;
 }
 
 .tag {
