--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,18 @@ $backgroundYellowGreen: #a7c798;
   background-color: $backgroundRedPurple;
 }
 
+.bluePurple {
+  background-color: $backgroundBluePurple;
+}
+
+.blueGreen {
+  background-color: $backgroundBlueGreen;
+}
+
 .yellowGreen {
   background-color: $backgroundYellowGreen;
+}
+
+.primary {
+  background-color: $primary;
 }
