Add interface for contents

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,13 @@
 $primary: #fff;
 
 $lightRedPurple: #e4b9eb;
-$lightBluePurple: #babeeb;
+$lightBluePurple: #b2c4f0;
 $lightBlueGreen: #99dcd4;
 $lightYellowGreen: #b0d0a1;
 
 $backgroundPink: #ffadc8;
 $backgroundRedPurple: #d5a6dd;
-$backgroundBluePurple: #a6abdd;
+$backgroundBluePurple: #a8bae7;
 $backgroundBlueGreen: #8ed6cd;
 $backgroundYellowGreen: #a7c798;
 
