--- a/src/components/molecules/Service/Service.scss
+++ b/src/components/molecules/Service/Service.scss
@@ -2,7 +2,10 @@
 
 .serviceContainer {
   border-radius: 20px;
-  padding: 30px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 25px;
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
@@ -13,16 +16,33 @@
 }
 
 .serviceTitle {
-  font-size: 22px;
+  font-size: 20px;
   padding-bottom: 10px;
 }
 
 .serviceDiscription {
-  font-size: 13px;
-  padding-bottom: 15px;
+  font-size: 15px;
+  margin-bottom: 20px;
+  height: 80px;
+}
+
+.serviceUrlContainer {
+  text-align: right;
+  padding-right: 20px;
 }
 
 .serviceUrl {
-  font-size: 13px;
+  font-size: 15px;
   color: $primary;
+}
+
+.serviceImageContainer {
+  text-align: center;
+}
+
+.serviceImage {
+  width: 300px;
+  height: 170px;
+  border-radius: 10px;
+  object-fit: cover;
 }
