--- a/src/components/molecules/Service/Service.scss
+++ b/src/components/molecules/Service/Service.scss
@@ -12,18 +12,17 @@
   text-align: left;
   width: 90%;
   max-width: 900px;
-  font-family: "Fredoka One", cursive;
 }
 
 .serviceTitle {
-  font-size: 20px;
-  padding-bottom: 10px;
+  font-size: 21px;
+  padding-bottom: 25px;
 }
 
 .serviceDiscription {
-  font-size: 15px;
+  font-size: 14px;
   margin-bottom: 20px;
-  height: 80px;
+  min-height: 80px;
 }
 
 .serviceUrlContainer {
