Create experience component

--- a/src/components/molecules/Service/Service.scss
+++ b/src/components/molecules/Service/Service.scss
@@ -35,8 +35,9 @@
   color: $primary;
 }
 
-.serviceImageContainer {
-  text-align: center;
+.columnContainer {
+  text-align: left;
+  padding: 2%;
 }
 
 .serviceImage {
