Create design section

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@ $secondary: #646464;
 $lightPink: #ffc3d7;
 $lightRedPurple: #ebaeed;
 $lightBluePurple: #c3aafa;
-$lightBlueGreen: #99dcd4;
+$lightBlueGreen: #a2e0d8;
 $lightYellowGreen: #b0d0a1;
 
 $backgroundPink: #ffadc8;
