--- a/src/components/organism/Content/Content.scss
+++ b/src/components/organism/Content/Content.scss
@@ -3,7 +3,8 @@
 .content {
   text-align: center;
   width: 100%;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .contentTitle {
