--- a/src/App.scss
+++ b/src/App.scss
@@ -2,16 +2,16 @@ $primary: #fff;
 $secondary: #646464;
 
 $lightPink: #ffc3d7;
-$lightRedPurple: #ebaeed;
 $lightBluePurple: #c3aafa;
-$lightBlueGreen: #a2e0d8;
+$lightBlueGreen: #8eded5;
 $lightYellowGreen: #b0d0a1;
+$lightRedPurple: #ebaeed;
 
 $backgroundPink: #ffadc8;
-$backgroundRedPurple: #d595d7;
 $backgroundBluePurple: #b49aec;
-$backgroundBlueGreen: #8ed6cd;
+$backgroundBlueGreen: #89d1c9;
 $backgroundYellowGreen: #a7c798;
+$backgroundRedPurple: #d595d7;
 
 .root {
   width: 100%;
