--- a/src/App.scss
+++ b/src/App.scss
@@ -3,13 +3,13 @@ $secondary: #646464;
 
 $lightPink: #ffc3d7;
 $lightBluePurple: #c3aafa;
-$lightBlueGreen: #8eded5;
+$lightBlueGreen: #89dad0;
 $lightYellowGreen: #b0d0a1;
 $lightRedPurple: #ebaeed;
 
 $backgroundPink: #ffadc8;
 $backgroundBluePurple: #b49aec;
-$backgroundBlueGreen: #89d1c9;
+$backgroundBlueGreen: #7fccc3;
 $backgroundYellowGreen: #a7c798;
 $backgroundRedPurple: #d595d7;
 
