--- a/src/components/molecules/Service/Service.scss
+++ b/src/components/molecules/Service/Service.scss
@@ -9,6 +9,7 @@
   text-align: left;
   width: 90%;
   max-width: 900px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .serviceTitle {
@@ -32,7 +33,7 @@
 }
 
 .serviceImage {
-  width: 300px;
+  width: 100%;
   height: 200px;
   border-radius: 10px;
   object-fit: cover;
