--- a/src/components/organism/Jumbotron/Jumbotron.scss
+++ b/src/components/organism/Jumbotron/Jumbotron.scss
@@ -30,14 +30,15 @@
 }
 
 .profileBorder {
-  height: 1.5px;
-  width: 80%;
+  height: 2px;
+  width: 230px;
   border-radius: 5px;
   background-color: $primary;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  animation: borderAnimation 1s ease;
+  margin-bottom: 20px;
+  animation: borderAnimation 2s ease 0.3s;
 }
 
 .snsContainer {
@@ -79,11 +80,11 @@
 
 @keyframes borderAnimation {
   0% {
-    width: 5%;
+    width: 0px;
   }
 
   100% {
-    width: 80%;
+    width: 230px;
   }
 }
 
