--- a/src/components/organism/Jumbotron/Jumbotron.scss
+++ b/src/components/organism/Jumbotron/Jumbotron.scss
@@ -31,7 +31,7 @@
 
 .profileBorder {
   height: 2px;
-  width: 230px;
+  width: 200px;
   border-radius: 5px;
   background-color: $primary;
   margin-left: auto;
@@ -67,24 +67,31 @@
 
 @keyframes imageAnimation {
   0% {
+    width: 350px;
   }
 
   50% {
+    width: 250px;
     transform: rotate(10deg);
   }
 
   100% {
+    width: 350px;
     transform: rotate(0deg);
   }
 }
 
 @keyframes borderAnimation {
   0% {
+    width: 200px;
+  }
+
+  50% {
     width: 0px;
   }
 
   100% {
-    width: 230px;
+    width: 200px;
   }
 }
 
