--- a/src/components/organism/Jumbotron/Jumbotron.scss
+++ b/src/components/organism/Jumbotron/Jumbotron.scss
@@ -71,7 +71,11 @@
   }
 
   50% {
-    width: 250px;
+    transform: rotate(10deg);
+  }
+
+  80% {
+    width: 300px;
     transform: rotate(10deg);
   }
 
@@ -83,10 +87,6 @@
 
 @keyframes borderAnimation {
   0% {
-    width: 200px;
-  }
-
-  50% {
     width: 0px;
   }
 
