--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ $lightYellowGreen: #b0d0a1;
 $lightRedPurple: #ebaeed;
 
 $backgroundPink: #ffadc8;
-$backgroundRedPurple: #181017;
+$backgroundRedPurple: #4e3457;
 
 .root {
   width: 100%;
