Fix jumbotron animation

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ $lightYellowGreen: #b0d0a1;
 $lightRedPurple: #ebaeed;
 
 $backgroundPink: #ffadc8;
-$backgroundRedPurple: #310c32;
+$backgroundRedPurple: #2f0c29;
 
 .root {
   width: 100%;
