--- a/src/components/organism/Jumbotron/Jumbotron.scss
+++ b/src/components/organism/Jumbotron/Jumbotron.scss
@@ -17,7 +17,7 @@
 .profileImage {
   width: 350px;
   height: auto;
-  animation: imageAnimation 0.8s ease 0.7s;
+  animation: imageAnimation 0.8s ease 0.9s infinite alternate;
 }
 
 .profileTitle {
