--- a/src/components/molecules/Service/Service.scss
+++ b/src/components/molecules/Service/Service.scss
@@ -9,7 +9,7 @@
   text-align: left;
   width: 90%;
   max-width: 900px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .serviceTitle {
@@ -32,9 +32,15 @@
   text-align: left;
 }
 
+.imageServiceContainer {
+  text-align: center;
+}
+
 .serviceImage {
-  width: 100%;
-  height: 200px;
+  width: 230px;
+  height: 230px;
   border-radius: 10px;
   object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
 }
