--- a/src/components/organism/Content/Content.scss
+++ b/src/components/organism/Content/Content.scss
@@ -3,8 +3,9 @@
 .content {
   text-align: center;
   width: 100%;
-  padding-top: 100px;
+  padding-top: 10px;
   padding-bottom: 100px;
+  opacity: 0;
 }
 
 .contentTitle {
