Add images & Lint

--- a/src/components/molecules/Experience/Experience.scss
+++ b/src/components/molecules/Experience/Experience.scss
@@ -1,4 +1,4 @@
-@import "../../../App.scss";
+@import '../../../App.scss';
 
 .experienceContainer {
   border-radius: 20px;
@@ -20,7 +20,7 @@
   padding-left: 25px;
   padding-right: 25px;
   color: white;
-  font-family: "Fredoka One", cursive;
+  font-family: 'Fredoka One', cursive;
 }
 
 .experiencePosition {
@@ -30,7 +30,7 @@
   padding-right: 5%;
   color: white;
   text-align: right;
-  font-family: "Fredoka One", cursive;
+  font-family: 'Fredoka One', cursive;
 }
 
 .experienceTitle {
