--- a/src/components/organism/Content/Content.scss
+++ b/src/components/organism/Content/Content.scss
@@ -1,4 +1,4 @@
-@import "../../../App.scss";
+@import '../../../App.scss';
 
 .content {
   text-align: center;
@@ -9,12 +9,12 @@
 }
 
 .contentTitle {
-  font-family: "Fredoka One", cursive;
+  font-family: 'Fredoka One', cursive;
   font-size: 40px;
 }
 
 .contentSubTitle {
-  font-family: "Fredoka One", cursive;
+  font-family: 'Fredoka One', cursive;
   font-size: 30px;
   padding: 30px;
 }
