--- a/src/components/molecules/Experience/Experience.scss
+++ b/src/components/molecules/Experience/Experience.scss
@@ -2,47 +2,36 @@
 
 .experienceContainer {
   border-radius: 20px;
-  padding-top: 40px;
-  padding-left: 20px;
-  padding-right: 20px;
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   text-align: left;
   width: 90%;
   max-width: 900px;
-  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .experienceName {
   font-size: 30px;
-  padding-top: 10px;
-  padding-left: 25px;
-  padding-right: 25px;
   color: white;
   font-family: 'Fredoka One', cursive;
 }
 
 .experiencePosition {
   font-size: 16px;
-  padding-top: 23px;
-  padding-left: 25px;
-  padding-right: 5%;
   color: white;
-  text-align: right;
   font-family: 'Fredoka One', cursive;
 }
 
 .experienceTitle {
   font-size: 17px;
-  padding-bottom: 15px;
+  margin-top: 10px;
   height: 60px;
 }
 
 .experienceDiscription {
   font-size: 14px;
-  margin-bottom: 30px;
-  height: 60px;
+  margin-bottom: 20px;
+  height: 65px;
 }
 
 .experienceUrl {
@@ -59,14 +48,11 @@
 
 .columnContainer {
   text-align: left;
-  padding-left: 6%;
-  padding-right: 6%;
-  padding-bottom: 5%;
 }
 
 .experienceImage {
-  width: 350px;
-  height: 201px;
+  width: 100%;
+  height: 220px;
   border-radius: 10px;
   object-fit: cover;
 }
